# cs31

./: README.md
project3/: CMakeLists.txt
project3/libs/: CMakeLists.txt  parser.cpp  parser.h
project3/test/: CMakeLists.txt  test_parser.cpp
project4/: CMakeLists.txt  README.md
project4/libs/: CMakeLists.txt  array.cpp
project4/test/: CMakeLists.txt  test_array.cpp  test_countFloatingPointValues.cpp  test_findLastOccurrence.cpp  test_hasDuplicates.cpp  test_hasReverse.cpp  test_locateMaximum.cpp  test_majorityElement.cpp  test_matchingValuesTogether.cpp  test_replaceAll.cpp
project5/: CMakeLists.txt  README.md
project5/libs/: BoxOffice.cpp  BoxOffice.h  CMakeLists.txt  MovieTicket.cpp  MovieTicket.h
project5/test/: CMakeLists.txt  test_box.cpp  test_movie.cpp
